--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -132,6 +132,16 @@ EXEMPT_VIEW_PERMISSIONS = {{ netbox_exempt_view_permissions|to_json }}
 EXEMPT_VIEW_PERMISSIONS = []
 {% endif %}
 
+{% if netbox_field_choices|length > 0 %}
+FIELD_CHOICES = {
+{% for key,values in netbox_field_choices.items() %}
+    {{ key }}: (
+        ({{ values|join(', ') }}),
+    )
+{% endfor %}
+}
+{% endif %}
+
 {% if netbox_override_dynamic_config %}
 GRAPHQL_ENABLED = {{ netbox_graphql_enabled }}
 {% endif %}
