--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -111,6 +111,10 @@ CUSTOM_VALIDATORS = {
 
 DEBUG = {{ netbox_debug }}
 
+{% if netbox_default_user_preferences | length > 0 %}
+DEFAULT_USER_PREFERENCES = {{ netbox_default_user_preferences|to_json }}
+{% endif %}
+
 EMAIL = {
     'SERVER': '{{ netbox_email.server }}',
     'PORT': {{ netbox_email.port }},
@@ -130,6 +134,16 @@ ENFORCE_GLOBAL_UNIQUE = {{ netbox_enforce_global_unique }}
 EXEMPT_VIEW_PERMISSIONS = {{ netbox_exempt_view_permissions|to_json }}
 {% else %}
 EXEMPT_VIEW_PERMISSIONS = []
+{% endif %}
+
+{% if netbox_field_choices|length > 0 %}
+FIELD_CHOICES = {
+{% for key,values in netbox_field_choices.items() %}
+    {{ key }}: (
+        ('{{ values| map('quote') | join('\',\'') }}'),
+    )
+{% endfor %}
+}
 {% endif %}
 
 {% if netbox_override_dynamic_config %}
