--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -231,9 +231,9 @@ REMOTE_AUTH_BACKEND = '{{ netbox_remote_auth.backend }}'
 {% if netbox_remote_auth.header is defined %}
 REMOTE_AUTH_HEADER = '{{ netbox_remote_auth.header }}'
 {% endif %}
-REMOTE_AUTH_AUTO_CREATE_USER = {{ netbox_remote_auth.auto_create_user }}
-REMOTE_AUTH_DEFAULT_GROUPS = {{ netbox_remote_auth.default_groups | to_json }}
-REMOTE_AUTH_DEFAULT_PERMISSIONS = {{ netbox_remote_auth.default_permissions | to_json }}
+REMOTE_AUTH_AUTO_CREATE_USER = {{ netbox_remote_auth.auto_create_user | default('False') }}
+REMOTE_AUTH_DEFAULT_GROUPS = {{ netbox_remote_auth.default_groups | default([]) | to_json }}
+REMOTE_AUTH_DEFAULT_PERMISSIONS = {{ netbox_remote_auth.default_permissions | default({}) | to_json }}
 
 {% if netbox_release_check_url == 'None' %}
 RELEASE_CHECK_URL = None
