--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -235,6 +235,15 @@ REMOTE_AUTH_AUTO_CREATE_USER = {{ netbox_remote_auth.auto_create_user }}
 REMOTE_AUTH_DEFAULT_GROUPS = {{ netbox_remote_auth.default_groups | to_json }}
 REMOTE_AUTH_DEFAULT_PERMISSIONS = {{ netbox_remote_auth.default_permissions | to_json }}
 
+{% if netbox_remote_auth.azuread_oauth2 is defined %}
+SOCIAL_AUTH_AZUREAD_OAUTH2_KEY = '{{ netbox_remote_auth.azuread_oauth2.key }}'
+SOCIAL_AUTH_AZUREAD_OAUTH2_SECRET = '{{ netbox_remote_auth.azuread_oauth2.secret }}'
+{% endif %}
+
+{% if netbox_remote_auth.social_auth_redirect_is_https is defined %}
+SOCIAL_AUTH_REDIRECT_IS_HTTPS = {{ netbox_remote_auth.social_auth_redirect_is_https }}
+{% endif %}
+
 {% if netbox_release_check_url == 'None' %}
 RELEASE_CHECK_URL = None
 {% else %}
