--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -212,7 +212,7 @@ PAGINATE_COUNT = {{ netbox_paginate_count }}
 
 PLUGINS = [
 {% for plugin in netbox_plugins %}
-{{ plugin.name if plugin.state | default('present') == 'present' }},
+{{ plugin.name if plugin.state | default('present') == 'present' + ',' }}
 {% endfor %}
 ]
 
