--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -259,8 +259,8 @@ RACK_ELEVATION_DEFAULT_UNIT_WIDTH = {{ netbox_rack_elevation_default_unit_width 
 
 # Remote authentication support
 REMOTE_AUTH_ENABLED = {{ netbox_remote_auth.enabled }}
-{%- if netbox_version_tag < 3.4.7  +%}
-REMOTE_AUTH_BACKEND = '{{ netbox_remote_auth.backend }}'
+{%- if netbox_version_tag < 'v3.4.7' +%}
+REMOTE_AUTH_BACKEND = '{{ netbox_remote_auth.backend | join() }}'
 {%- else +%}
 REMOTE_AUTH_BACKEND = {{ netbox_remote_auth.backend | to_json }}
 {%- endif +%}
