--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -109,6 +109,10 @@ CORS_ORIGIN_REGEX_WHITELIST = {{ netbox_cors_origin_regex_whitelist|to_json }}
 CORS_ORIGIN_REGEX_WHITELIST = []
 {% endif %}
 
+{% if netbox_csrf_cookie_secure is defined %}
+CSRF_COOKIE_SECURE = {{ netbox_csrf_cookie_secure | to_json }}
+{% endif %}
+
 {% if netbox_csrf_trusted_origins | length > 0 %}
 CSRF_TRUSTED_ORIGINS = {{ netbox_csrf_trusted_origins }}
 {% endif %}
@@ -314,7 +318,15 @@ FILE_UPLOAD_MAX_MEMORY_SIZE = {{ netbox_file_upload_max_memory_size }}
 CSRF_COOKIE_NAME = '{{ netbox_csrf_cookie_name }}'
 {% endif %}
 
+{% if netbox_secure_ssl_redirect is defined %}
+SECURE_SSL_REDIRECT = {{ netbox_secure_ssl_redirect | to_json }}
+{% endif %}
+
 SESSION_COOKIE_NAME = '{{ netbox_session_cookie_name }}'
+
+{% if netbox_session_cookie_secure is defined %}
+SESSION_COOKIE_SECURE = {{ netbox_session_cookie_secure | to_json }}
+{% endif %}
 
 {% if netbox_session_file_path == 'None' %}
 SESSION_FILE_PATH = None
