--- a/templates/configuration.py.j2
+++ b/templates/configuration.py.j2
@@ -291,7 +291,7 @@ SOCIAL_AUTH_AZUREAD_OAUTH2_SECRET = '{{ netbox_remote_auth.azuread_oauth2.secret
 SOCIAL_AUTH_GITHUB_ORG_KEY = '{{ netbox_remote_auth.github_organization_oauth2.key }}'
 SOCIAL_AUTH_GITHUB_ORG_SECRET = '{{ netbox_remote_auth.github_organization_oauth2.secret }}'
 SOCIAL_AUTH_GITHUB_ORG_NAME = '{{ netbox_remote_auth.github_organization_oauth2.org_name }}'
-SOCIAL_AUTH_GITHUB_ORG_SCOPE = ['read:org']
+SOCIAL_AUTH_GITHUB_ORG_SCOPE = ['read:org', 'user:email']
 {% endif %}
 {% endif %}
 
